--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,6 @@ SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib)
 #ADD_LIBRARY(Module_based_autodiff SHARED ${LIBSTATIC_SRC})
 #SET(LIBSTATIC_SRC class_based_autodiff.cpp)
 #ADD_LIBRARY(class_based_autodiff SHARED ${LIBSTATIC_SRC})
-SET(LIBSTATIC_SRC functionaudi.cpp)
+SET(LIBSTATIC_SRC functionaudi.cpp functionaudi.cpp functionaudi.h)
 ADD_LIBRARY(functional_autodiff SHARED ${LIBSTATIC_SRC})
 SET_TARGET_PROPERTIES(functional_autodiff PROPERTIES LIBRARY_OUTPATH_DIRETORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
